ajustando auth jwt